Carousel works on mobile and desktop, but still needs some fixes

--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -101,7 +101,7 @@
 			display: flex;
 			padding: 0.5em 0;
 			width: 100%;
-			// animation: slide 20s linear infinite;
+			animation: slide 20s linear infinite;
 			animation-play-state: running;
 			transition: animation-play-state, transform 0.1s ease-in-out;
 		}
