--- a/src/sass/components/_components.scss
+++ b/src/sass/components/_components.scss
@@ -28,7 +28,7 @@
 	top: 0;
 	left: 0;
 	width: 300%;
-	animation: moving-shape-divider 10s ease-in-out infinite;
+	animation: moving-shape-divider 7s ease-in-out infinite;
 	overflow: hidden;
 	line-height: 0;
 }
